<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">ОрланДроид</string>
	<string name="app_description">Магазин облачных мобильных приложений</string>

	<string name="top_menu_item">Топ</string>
	<string name="categories_menu_item">Категории</string>
	<string name="my_apps_menu_item">Мои</string>
	<string name="account_menu_item">Аккаунт</string>

	<string name="top_toolbar_title">Топ приложений</string>
	<string name="categories_toolbar_title">Категории приложений</string>
	<string name="my_apps_toolbar_title">Мои приложения</string>
	<string name="account_toolbar_title">Мой аккаунт</string>
	<string name="search_result_title">Результаты по запросу: %s</string>
	<string name="app_details_toolbar_title">О приложении</string>
	<string name="developer_title">О разработчике</string>
	<string name="registration_title">Регистрация</string>
	<string name="login_title">Вход в аккаунт</string>

	<string name="description_header">Описание</string>
	<string name="changelog_header">История изменений</string>
	<string name="app_info_header">Информация</string>
	<string name="review_developer_feedback_header">Ответ разработчика</string>
	<string name="developer_apps_header">Приложения разработчика</string>

	<string name="email_hint">Адрес электронной почты</string>
	<string name="password_hint">Пароль</string>
	<string name="confirm_password_hint">Повторите пароль</string>
	<string name="name_hint">Имя</string>
	<string name="verify_code_hint">Код подтверждения</string>
	<string name="search_hint">Поиск приложений…</string>
	<string name="review_hint">Ваш отзыв (необязательно)</string>

	<string name="app_version_content">Версия: %s</string>
	<string name="published_at_content">Опубликовано: %s</string>
	<string name="updated_at_content">Обновлено: %s</string>

	<string name="toggle_sort_by_rating">По рейтингу</string>
	<string name="toggle_sort_by_users_count">По пользователям</string>

	<string name="action_register">Зарегистрироваться</string>
	<string name="action_login_hint">Уже есть аккаунт? Войти</string>
	<string name="action_login">Войти</string>
	<string name="action_logout">Выйти</string>
	<string name="action_require_verify_code">Запросить код подтверждения</string>
	<string name="action_restore_password">Восстановить пароль</string>
	<string name="action_change_email">Сменить адрес электронной почты</string>
	<string name="action_change_password">Сменить пароль</string>
	<string name="action_change_name">Изменить имя</string>
	<string name="action_launch">Запустить</string>
	<string name="action_leave_review">Оставить отзыв</string>
	<string name="action_edit_review">Изменить отзыв</string>
	<string name="action_delete_review">Удалить отзыв</string>
	<string name="action_link_website">На сайт</string>
	<string name="action_link_email">Написать</string>
	<string name="action_link_phone">Позвонить</string>
	<string name="action_doc">Документация</string>

	<string name="context_action_about">О приложении</string>
	<string name="context_action_share">Поделиться</string>
	<string name="context_action_remove">Удалить</string>

	<string name="share_app_title">Поделиться приложением</string>
	<string name="share_app_text">Приложение %s доступно на платформе %s! Переходи по ссылке: %s</string>

	<string name="error_link_website">Не удалось открыть сайт</string>
	<string name="error_link_email">Не удалось открыть E-mail</string>
	<string name="error_link_phone">Не удалось открыть телефон</string>
	<string name="error_passwords_not_match">Пароли не совпадают</string>
	<string name="error_request_failure">Ошибка при выполнении запроса</string>
	<string name="error_request_failure_status_code">Статус-код: %i</string>
	<string name="error_load">Не удалось загрузить %s</string>

	<string name="toast_launch_not_implemented">Запуск ещё не реализован</string>
	<string name="toast_enter_email">Введите адрес электронной почты</string>
	<string name="toast_password_changed_successfully">Пароль успешно изменён</string>

	<string name="app_icon_content_description">Иконка приложения</string>
	<string name="app_screenshot_content_description">Скриншот приложения</string>
	<string name="rating_content_description">Рейтинг</string>
	<string name="like_content_description">Лайк</string>
	<string name="dislike_content_description">Дизлайк</string>
	<string name="developer_logo_content_description">Логотип разработчика</string>

	<string-array name="categories">
		<item>Автомобили и транспорт</item>
		<item>Бизнес</item>
		<item>Дом и семья</item>
		<item>Еда и напитки</item>
		<item>Здоровье и фитнес</item>
		<item>Игры</item>
		<item>Инструменты</item>
		<item>Инструменты для разработчиков</item>
		<item>Искусство и дизайн</item>
		<item>Карты и навигация</item>
		<item>Книги</item>
		<item>Медицина</item>
		<item>Музыка и аудио</item>
		<item>Новости</item>
		<item>Образование</item>
		<item>Персонализация</item>
		<item>Погода</item>
		<item>Покупки</item>
		<item>Продуктивность</item>
		<item>Путешествия</item>
		<item>Работа</item>
		<item>Развлечения</item>
		<item>Социальные сети и мессенджеры</item>
		<item>Спорт</item>
		<item>Стиль жизни</item>
		<item>Финансы</item>
		<item>Фото и видео</item>
	</string-array>
</resources>
