<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		android:gravity="center"
		android:padding="@dimen/spacing_lg"
		android:orientation="vertical">

		<com.google.android.material.textview.MaterialTextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/registration_title"
			android:textAppearance="@style/TextAppearance.Material3.TitleLarge.Emphasized"/>

		<com.google.android.material.progressindicator.LinearProgressIndicator
			android:id="@+id/progress_bar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginVertical="@dimen/spacing_xs"
			android:indeterminate="true"
			android:visibility="gone" />

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginVertical="@dimen/spacing_md">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/email_hint"
				android:inputType="textEmailAddress" />

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.button.MaterialButton
			android:id="@+id/btn_register"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/action_register" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/btn_login"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:backgroundTint="@android:color/transparent"
			android:text="@string/action_login_hint"
			android:textColor="?attr/colorPrimary" />

	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
