<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toTopOf="parent">

		<com.google.android.material.appbar.MaterialToolbar
			android:id="@+id/toolbar_title"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			app:title="@string/top_toolbar_title" />

		<androidx.appcompat.widget.SearchView
			android:id="@+id/search_bar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/spacing_sm"
			app:layout_scrollFlags="scroll|enterAlways"
			app:queryHint="@string/search_hint" />

	</com.google.android.material.appbar.AppBarLayout>

	<com.google.android.material.button.MaterialButtonToggleGroup
		android:id="@+id/toggle_sort"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/spacing_md"
		android:layout_marginVertical="@dimen/spacing_sm"
		app:layout_constraintTop_toBottomOf="@id/toolbar"
		app:selectionRequired="true"
		app:singleSelection="true"
		app:checkedButton="@id/btn_rating" >

		<com.google.android.material.button.MaterialButton
			android:id="@+id/btn_rating"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/toggle_sort_by_rating"
			style="?attr/materialButtonOutlinedStyle"/>

		<com.google.android.material.button.MaterialButton
			android:id="@+id/btn_users"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/toggle_sort_by_users_count"
			style="?attr/materialButtonOutlinedStyle"/>

	</com.google.android.material.button.MaterialButtonToggleGroup>

	<com.google.android.material.progressindicator.LinearProgressIndicator
		android:id="@+id/progress_bar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginVertical="@dimen/spacing_xs"
		app:layout_constraintTop_toBottomOf="@id/toggle_sort"
		android:indeterminate="true"
		android:visibility="gone" />

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/recycler_view"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		app:layout_constraintTop_toBottomOf="@id/progress_bar"
		app:layout_constraintBottom_toBottomOf="parent"
		android:padding="@dimen/spacing_sm"
		tools:listitem="@layout/item_app" />

</androidx.constraintlayout.widget.ConstraintLayout>
