<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toTopOf="parent">

		<com.google.android.material.appbar.MaterialToolbar
			android:id="@+id/toolbar_title"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			app:title="@string/account_toolbar_title" />

	</com.google.android.material.appbar.AppBarLayout>

	<com.google.android.material.progressindicator.LinearProgressIndicator
		android:id="@+id/progress_bar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toBottomOf="@id/toolbar"
		android:layout_marginVertical="@dimen/spacing_xs"
		android:indeterminate="true"
		android:visibility="gone" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toBottomOf="@id/progress_bar"
		android:orientation="vertical"
		android:padding="@dimen/spacing_md">

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:drawableEnd="@drawable/ic_edit"
			android:textAppearance="@style/TextAppearance.Material3.TitleLarge.Emphasized"
			android:text="Имя пользователя" />

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/email"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginVertical="@dimen/spacing_xs"
			android:drawableEnd="@drawable/ic_edit"
			android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
			android:text="Адрес электронной почты" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<com.google.android.material.button.MaterialButton
				android:id="@+id/btn_change_password"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_marginEnd="@dimen/spacing_sm"
				android:text="@string/action_change_password"
				style="?attr/materialButtonOutlinedStyle" />

			<com.google.android.material.button.MaterialButton
				android:id="@+id/btn_logout"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/action_logout"
				android:textColor="@color/danger"
				style="?attr/materialButtonOutlinedStyle"/>

		</LinearLayout>

	</LinearLayout>

	<com.google.android.material.button.MaterialButton
		android:id="@+id/btn_doc"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		android:layout_margin="@dimen/spacing_md"
		app:icon="@drawable/ic_docs"
		app:iconGravity="textEnd"
		android:text="@string/action_doc"
		style="?attr/materialButtonOutlinedStyle" />

</androidx.constraintlayout.widget.ConstraintLayout>
